Update: i18n set zh-Hans as default

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
   <ul nz-menu nzMode="vertical">
     <li
       nz-menu-item
-      nz-tooltip="Wrok"
+      nz-tooltip="工作区"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
@@ -12,7 +12,7 @@
     </li>
     <li
       nz-menu-item
-      nz-tooltip="Space"
+      nz-tooltip="空间"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
@@ -22,7 +22,7 @@
     </li>
     <li
       nz-menu-item
-      nz-tooltip="Orgs"
+      nz-tooltip="组织"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
@@ -32,7 +32,7 @@
     </li>
     <li
       nz-menu-item
-      nz-tooltip="Monitor"
+      nz-tooltip="监控"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
@@ -42,7 +42,7 @@
     </li>
     <li
       nz-menu-item
-      nz-tooltip="Settings"
+      nz-tooltip="设置"
       i18n-nz-tooltip
       nzTooltipPlacement="right"
       nzMatchRouter
