--- a/src/app/admin/orgs/developer/form/form.component.html
+++ b/src/app/admin/orgs/developer/form/form.component.html
@@ -2,30 +2,14 @@
   <nz-row [nzGutter]="24">
     <nz-col [nzSpan]="14">
       <nz-form-item>
-        <nz-form-label nzRequired>Email</nz-form-label>
-        <nz-form-control
-          nzHasFeedback
-          [nzAutoTips]="{
-            default: {
-              required: 'The email cannot be empty',
-              duplicated: 'Duplicate definitions exist, email must be unique'
-            }
-          }"
-        >
-          <input nz-input type="email" formControlName="email" placeholder="Please enter email" />
+        <nz-form-label nzRequired i18n>电子邮件</nz-form-label>
+        <nz-form-control nzHasFeedback [nzAutoTips]="tips.email">
+          <input nz-input type="email" formControlName="email" placeholder="请输入电子邮件" i18n-placeholder />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzRequired]="!doc"> Password </nz-form-label>
-        <nz-form-control
-          nzHasFeedback
-          [nzAutoTips]="{
-            default: {
-              required: 'The password cannot be empty',
-              minlength: 'The password cannot be less than 6 characters'
-            }
-          }"
-        >
+        <nz-form-label [nzRequired]="!doc" i18n> 密码 </nz-form-label>
+        <nz-form-control nzHasFeedback nzExtra="非必须，为空不更新" i18n-nzExtra [nzAutoTips]="tips.password">
           <nz-input-group [nzSuffix]="suffixTemplate">
             <ng-template #suffixTemplate>
               <i
@@ -39,21 +23,22 @@
               nz-input
               autocomplete="new-password"
               formControlName="password"
-              [placeholder]="!doc ? 'Please enter password' : 'Not required, empty will not update the password'"
+              placeholder="请输入密码"
+              i18n-placeholder
             />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>Call</nz-form-label>
+        <nz-form-label i18n>称呼</nz-form-label>
         <nz-form-control>
-          <input nz-input formControlName="name" placeholder="Please enter call" />
+          <input nz-input formControlName="name" placeholder="请输入称呼" i18n-placeholder />
         </nz-form-control>
       </nz-form-item>
     </nz-col>
     <nz-col [nzSpan]="10">
       <nz-form-item>
-        <nz-form-label>Avatar</nz-form-label>
+        <nz-form-label i18n>头像</nz-form-label>
         <nz-form-control>
           <wpx-upload-avatar
             wpxExt="image"
@@ -68,7 +53,7 @@
   </nz-row>
 
   <nz-form-item>
-    <nz-form-label nzRequired>Status</nz-form-label>
+    <nz-form-label nzRequired i18n>状态</nz-form-label>
     <nz-form-control>
       <nz-switch formControlName="status"></nz-switch>
     </nz-form-control>
@@ -76,6 +61,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
