--- a/src/app/admin/settings/security/session/session.component.html
+++ b/src/app/admin/settings/security/session/session.component.html
@@ -1,12 +1,7 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>Session Timeout</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      nzExtra="After the setting is successful, the session starts to take effect gradually"
-      i18n-nzExtra
-      [nzAutoTips]="tips.session_ttl"
-    >
+    <nz-form-label nzRequired i18n>会话超时</nz-form-label>
+    <nz-form-control nzHasFeedback nzExtra="设置成功后会话开始渐进生效" i18n-nzExtra [nzAutoTips]="tips.session_ttl">
       <nz-input-number
         style="width: 100%"
         formControlName="session_ttl"
@@ -19,6 +14,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
