--- a/src/app/admin/settings/cloud/cloud.component.html
+++ b/src/app/admin/settings/cloud/cloud.component.html
@@ -5,7 +5,7 @@
     [(nzSelectedIndex)]="tabIndex"
     (nzSelectedIndexChange)="saveTabIndex()"
   >
-    <nz-tab nzTitle="Tencent Cloud" i18n-nzTitle>
+    <nz-tab nzTitle="腾讯云" i18n-nzTitle>
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 96px" [src]="['assets', 'Tencent-Cloud.svg'] | wpxAssets" alt="" />
@@ -17,7 +17,7 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="tencentEditTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="tencentEditTpl">
         <ng-template #tencentEditTpl>
           <button nz-button nzType="text" (click)="setTencent()">
             <span nz-icon nzType="edit"></span>
@@ -31,7 +31,7 @@
           </nz-descriptions-item>
           <nz-descriptions-item nzTitle="SecretKey">
             <ng-container *ngIf="values['tencent_secret_key']; else unkown">
-              <span i18n>Already Set</span>
+              <span i18n>已设置</span>
             </ng-container>
           </nz-descriptions-item>
         </nz-descriptions>
@@ -39,30 +39,30 @@
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="cosEditTpl">
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="cosEditTpl">
             <ng-template #cosEditTpl>
               <button nz-button nzType="text" (click)="setCos()">
                 <span nz-icon nzType="edit"></span>
               </button>
             </ng-template>
-            <p i18n>Store static files in COS object storage, and then distribute content through CDN back-to-source</p>
+            <p i18n>将静态文件存储在 COS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-descriptions nzLayout="vertical" [nzColumn]="2">
-              <nz-descriptions-item nzTitle="Bucket Name" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="Bucket 名称" i18n-nzTitle>
                 <ng-container *ngIf="values['tencent_cos_bucket']; else unkown">
                   {{ values['tencent_cos_bucket'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="Region" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="地区" i18n-nzTitle>
                 <ng-container *ngIf="values['tencent_cos_region']; else unkown">
                   {{ values['tencent_cos_region'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="Pre-signature TTL" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="预签名有效期" i18n-nzTitle>
                 <ng-container *ngIf="values['tencent_cos_expired']; else unkown">
                   {{ values['tencent_cos_expired'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="Upload size limit (KB)" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="上传大小限制 (KB)" i18n-nzTitle>
                 <ng-container *ngIf="values['tencent_cos_limit']; else unkown">
                   {{ values['tencent_cos_limit'] }}
                 </ng-container>
@@ -71,20 +71,20 @@
           </nz-card>
         </nz-col>
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="Message Queue" i18n-nzTitle [nzExtra]="notYetTpl">
-            <p i18n>Use Tencent Cloud TDMQ Plusar for Transaction Compensation</p>
+          <nz-card nzSize="small" nzType="inner" nzTitle="消息队列" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>使用腾讯云 TDMQ Plusar 进行消息事务补偿</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="Log System" i18n-nzTitle [nzExtra]="notYetTpl">
-            <p i18n>Use Tencent Cloud CLS log service to collect logs</p>
+          <nz-card nzSize="small" nzType="inner" nzTitle="日志系统" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>使用腾讯云 CLS 日志服务收集日志</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
       </nz-row>
     </nz-tab>
-    <nz-tab nzTitle="Alibaba Cloud" i18n-nzTitle>
+    <nz-tab nzTitle="阿里云" i18n-nzTitle>
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'Alibaba-Cloud.webp'] | wpxAssets" alt="" />
@@ -96,20 +96,20 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="notYetTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="notYetTpl">
         <nz-empty nzNotFoundContent=""></nz-empty>
       </nz-card>
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="notYetTpl">
-            <p i18n>Store static files in OSS object storage, and then distribute content through CDN back-to-source</p>
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>将静态文件存储在 COS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
       </nz-row>
     </nz-tab>
-    <nz-tab nzTitle="Huawei Cloud" i18n-nzTitle>
+    <nz-tab nzTitle="华为云" i18n-nzTitle>
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'Huawei-Cloud.png'] | wpxAssets" alt="" />
@@ -120,14 +120,14 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="Detail" i18n-nzTitle [nzExtra]="notYetTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="notYetTpl">
         <nz-empty nzNotFoundContent=""></nz-empty>
       </nz-card>
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="Object Storage" i18n-nzTitle [nzExtra]="notYetTpl">
-            <p i18n>Store static files in OBS object storage, and then distribute content through CDN back-to-source</p>
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="notYetTpl">
+            <p i18n>将静态文件存储在 COS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
