--- a/src/app/admin/settings/collaboration/redirect/redirect.component.html
+++ b/src/app/admin/settings/collaboration/redirect/redirect.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>Redirect URL</nz-form-label>
+    <nz-form-label nzRequired i18n>跳转地址</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.redirect_url">
       <input nz-input formControlName="redirect_url" />
     </nz-form-control>
@@ -8,6 +8,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
