--- a/src/app/admin/settings/security/ip-list/ip-list.component.html
+++ b/src/app/admin/settings/security/ip-list/ip-list.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label i18n>IP Address</nz-form-label>
+    <nz-form-label i18n>IP 地址</nz-form-label>
     <nz-form-control [formArrayName]="this.key">
       <ng-container *ngFor="let x of list?.controls; index as i; first as isFirst">
         <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
@@ -9,7 +9,7 @@
             type="text"
             nz-input
             [formControlName]="i"
-            placeholder="Please enter an IP address"
+            placeholder="请输入 IP 地址"
             i18n-placeholder
           />
           <button nz-button type="button" nzType="default" style="width: 10%" (click)="remove(i)">
@@ -18,13 +18,13 @@
         </nz-input-group>
       </ng-container>
       <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="append()" i18n>
-        <i nz-icon nzType="plus-circle"></i> Add Address
+        <i nz-icon nzType="plus-circle"></i> 新增
       </button>
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
