--- a/src/app/admin/settings/security/security.component.html
+++ b/src/app/admin/settings/security/security.component.html
@@ -5,14 +5,13 @@
     [(nzSelectedIndex)]="tabIndex"
     (nzSelectedIndexChange)="saveTabIndex()"
   >
-    <nz-tab nzTitle="Basic" i18n-nzTitle>
+    <nz-tab nzTitle="基本设置" i18n-nzTitle>
       <nz-list nzSize="large" nzItemLayout="vertical">
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b i18n>Session Timeout Policy</b></nz-list-item-meta-title>
+            <nz-list-item-meta-title><b i18n>会话超时策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description i18n>
-              If the user does not operate within {{ values['session_ttl'] / 1e9 }} seconds, log out of the current
-              account.
+              用户在 {{ values['session_ttl'] / 1e9 }} 秒内没有操作，退出当前帐号。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
@@ -20,7 +19,7 @@
               nz-button
               nzType="primary"
               nzShape="circle"
-              nz-tooltip="Edit"
+              nz-tooltip="编辑"
               i18n-nz-tooltip
               (click)="setSession()"
             >
@@ -30,10 +29,9 @@
         </nz-list-item>
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b i18n>Account Lockout Policy</b></nz-list-item-meta-title>
+            <nz-list-item-meta-title><b i18n>帐号锁定策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description i18n>
-              The user failed to log in {{ values['login_failures'] }} times consecutively, and the account was locked
-              for {{ values['login_ttl'] / 1e9 }} seconds.
+              用户连续登录失败 {{ values['login_failures'] }} 次， 锁定帐号 {{ values['login_ttl'] / 1e9 }} 秒。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
@@ -41,7 +39,7 @@
               nz-button
               nzType="primary"
               nzShape="circle"
-              nz-tooltip="Edit"
+              nz-tooltip="编辑"
               i18n-nz-tooltip
               (click)="setUserLock()"
             >
@@ -51,29 +49,26 @@
         </nz-list-item>
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b i18n>IP Lockout Policy</b></nz-list-item-meta-title>
+            <nz-list-item-meta-title><b i18n>IP 锁定策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description i18n>
-              IP After {{ values['ip_login_failures'] }} consecutive login failures (enabled when there is no
-              whitelist), lock the IP.
+              IP 连续 {{ values['ip_login_failures'] }} 次登录失败后（无白名单时启用），锁定 IP。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
-            <button nz-button nzType="primary" nzShape="circle" nz-tooltip="Edit" (click)="setIpLock()">
+            <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" (click)="setIpLock()">
               <i nz-icon nzType="edit"></i>
             </button>
           </nz-list-item-extra>
         </nz-list-item>
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b i18n>Password Strength Policy</b></nz-list-item-meta-title>
+            <nz-list-item-meta-title><b i18n>密码强度策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
               <ng-container [ngSwitch]="values['pwd_strategy']">
-                <ng-container *ngSwitchCase="0" i18n> unlimited </ng-container>
-                <ng-container *ngSwitchCase="1" i18n> uppercase and lowercase letters </ng-container>
-                <ng-container *ngSwitchCase="2" i18n> uppercase and lowercase letters, numbers </ng-container>
-                <ng-container *ngSwitchCase="3" i18n>
-                  uppercase and lowercase letters, numbers, special characters
-                </ng-container>
+                <ng-container *ngSwitchCase="0" i18n> 无限制 </ng-container>
+                <ng-container *ngSwitchCase="1" i18n> 需要大写字母和小写字母 </ng-container>
+                <ng-container *ngSwitchCase="2" i18n> 需要大写字母、小写字母和数字 </ng-container>
+                <ng-container *ngSwitchCase="3" i18n> 需要大写字母、小写字母、数字和特殊字符 </ng-container>
               </ng-container>
             </nz-list-item-meta-description>
           </nz-list-item-meta>
@@ -82,7 +77,7 @@
               nz-button
               nzType="primary"
               nzShape="circle"
-              nz-tooltip="Edit"
+              nz-tooltip="编辑"
               i18n-nz-tooltip
               (click)="setPwdStrategy()"
             >
@@ -92,26 +87,25 @@
         </nz-list-item>
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b i18n>Password Expiration Policy</b></nz-list-item-meta-title>
+            <nz-list-item-meta-title><b i18n>密码有效期策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              <ng-container *ngIf="values['pwd_ttl'] === 0; else passwordExpire" i18n> Permanent </ng-container>
+              <ng-container *ngIf="values['pwd_ttl'] === 0; else passwordExpire" i18n> 永久 </ng-container>
               <ng-template #passwordExpire>
                 <ng-container i18n>
-                  The password will expire after {{ values['pwd_ttl'] / 86400e9 }} days, and the system will force you
-                  to change the password.
+                  {{ values['pwd_ttl'] / 86400e9 }} 天后密码过期，系统强制要求修改密码。
                 </ng-container>
               </ng-template>
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
-            <button nz-button nzType="primary" nzShape="circle" nz-tooltip="Edit" i18n-nz-tooltip (click)="setPwdTtl()">
+            <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" i18n-nz-tooltip (click)="setPwdTtl()">
               <i nz-icon nzType="edit"></i>
             </button>
           </nz-list-item-extra>
         </nz-list-item>
       </nz-list>
     </nz-tab>
-    <nz-tab nzTitle="Whitelist">
+    <nz-tab nzTitle="白名单" i18n-nzTitle>
       <nz-row [nzGutter]="[8, 8]">
         <nz-col nzFlex="800px">
           <nz-table
@@ -123,7 +117,7 @@
           >
             <thead>
               <tr>
-                <th><b i18n>IP Address</b></th>
+                <th><b i18n>IP 地址</b></th>
               </tr>
             </thead>
             <tbody>
@@ -132,7 +126,7 @@
               </tr>
             </tbody>
             <ng-template #whitelistActions>
-              <button nz-button nzType="text" nzBlock (click)="setIpList('ip_whitelist')" i18n>Edit</button>
+              <button nz-button nzType="text" nzBlock (click)="setIpList('ip_whitelist')" i18n>编辑</button>
             </ng-template>
           </nz-table>
         </nz-col>
@@ -140,13 +134,14 @@
           <nz-alert
             style="width: 200px"
             nzType="info"
-            nzMessage="IP Whitelist"
-            nzDescription="Whitelisting IPs does not restrict login failure lockouts."
+            nzMessage="IP 白名单"
+            i18n-nzMessage
+            nzDescription="白名单IP不限制登录失败的锁定"
           ></nz-alert>
         </nz-col>
       </nz-row>
     </nz-tab>
-    <nz-tab nzTitle="Blacklist">
+    <nz-tab nzTitle="黑名单" i18n-nzTitle>
       <nz-row [nzGutter]="[8, 8]">
         <nz-col nzFlex="800px">
           <nz-table
@@ -158,7 +153,7 @@
           >
             <thead>
               <tr>
-                <th><b i18n>IP Address</b></th>
+                <th><b i18n>IP 地址</b></th>
               </tr>
             </thead>
             <tbody>
@@ -167,7 +162,7 @@
               </tr>
             </tbody>
             <ng-template #blacklistActions>
-              <button nz-button nzType="text" nzBlock (click)="setIpList('ip_blacklist')" i18n>Edit</button>
+              <button nz-button nzType="text" nzBlock (click)="setIpList('ip_blacklist')" i18n>编辑</button>
             </ng-template>
           </nz-table>
         </nz-col>
@@ -175,8 +170,10 @@
           <nz-alert
             style="width: 200px"
             nzType="info"
-            nzMessage="IP Blacklist"
-            nzDescription="will ban all access."
+            nzMessage="IP 黑名单"
+            i18n-nzMessage
+            nzDescription="黑名单将被禁止访问"
+            i18n-nzDescription
           ></nz-alert>
         </nz-col>
       </nz-row>
