--- a/src/app/admin/settings/values/values.component.html
+++ b/src/app/admin/settings/values/values.component.html
@@ -6,15 +6,15 @@
         (keyup.enter)="getData()"
         type="text"
         nz-input
-        placeholder="Search"
+        placeholder="搜索"
         i18n-placeholder
       />
     </nz-input-group>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="Refresh" i18n-nz-tooltip (click)="getData()">
+      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="Reset" i18n-nz-tooltip (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
     </nz-button-group>
@@ -23,7 +23,7 @@
 
 <ng-template #actions>
   <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> Create </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> 新增 </button>
   </nz-space>
 </ng-template>
 
@@ -40,8 +40,8 @@
           (nzCheckedChange)="setNChecked($event)"
         >
         </th>
-        <th nzWidth="320px"><b i18n>Key</b></th>
-        <th><b i18n>Value</b></th>
+        <th nzWidth="320px"><b i18n>键名</b></th>
+        <th><b i18n>键值</b></th>
         <th nzWidth="60px" nzRight nzAlign="center">
           <button nz-button nzType="text" nzBlock disabled>
             <i nz-icon nzType="setting"></i>
@@ -62,8 +62,8 @@
           </button>
           <nz-dropdown-menu #actions="nzDropdownMenu">
             <ul nz-menu>
-              <li nz-menu-item (click)="form(data)" i18n>Edit</li>
-              <li nz-menu-item nzDanger (click)="delete(data.key)" i18n>Delete</li>
+              <li nz-menu-item (click)="form(data)" i18n>编辑</li>
+              <li nz-menu-item nzDanger (click)="delete(data.key)" i18n>删除</li>
             </ul>
           </nz-dropdown-menu>
         </td>
