--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
                 <span nz-icon nzType="caret-right"></span>
               </ng-template>
               <nz-breadcrumb-item>
-                <a [routerLink]="['/']"><span nz-icon nzType="home"></span> Home </a>
+                <a [routerLink]="['/']"><span nz-icon nzType="home"></span> 首页 </a>
               </nz-breadcrumb-item>
             </nz-breadcrumb>
           </nz-space>
